# osmic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  style.json
bins/omm-cli/: Cargo.toml
bins/omm-cli/src/: main.rs
bins/omm-viewer/: Cargo.toml
bins/omm-viewer/src/: label_shader.wgsl  main.rs  shader.wgsl
bins/osmic-cli/: Cargo.toml
bins/osmic-cli/src/: main.rs
bins/osmic-trail-server/: Cargo.toml
bins/osmic-trail-server/src/: bundle.rs  main.rs  manager.rs  region.rs
bins/osmic-viewer/: Cargo.toml
bins/osmic-viewer/src/: main.rs
crates/omm/: Cargo.toml
crates/omm-accel/: Cargo.toml  build.rs
crates/omm-accel/src/: error.rs  lib.rs
crates/omm-accel/src/metal/: accelerator.rs  batch.rs  context.rs  flatten.rs  mod.rs
crates/omm-app/: Cargo.toml
crates/omm-app/src/: app.rs  event.rs  lib.rs  resource.rs
crates/omm-core/: Cargo.toml
crates/omm-core/src/: bbox.rs  clip.rs  error.rs  geometry.rs  lib.rs  tile.rs
crates/omm-extract/: Cargo.toml
crates/omm-extract/src/: dedup.rs  entity.rs  filter.rs  lib.rs  output.rs  pipeline.rs
crates/omm-geo/: Cargo.toml
crates/omm-geo/src/: lib.rs  orient.rs  projection.rs  simplify.rs
crates/omm-index/: Cargo.toml
crates/omm-index/src/: feature_index.rs  lib.rs  node_location_store.rs  ram_node_store.rs
crates/omm-osm/: Cargo.toml
crates/omm-osm/src/: arena.rs  classify.rs  feature.rs  geojson.rs  lib.rs  pipeline.rs  tags.rs
crates/omm-osm/src/io/: blob_stream.rs
crates/omm-osm/src/multipolygon/: assembler.rs  mod.rs
crates/omm-render/: Cargo.toml
crates/omm-render/src/: backend.rs  scene.rs  skia.rs  style_eval.rs
crates/omm-repl/: Cargo.toml
crates/omm-repl/src/: apply.rs  dirty.rs  lib.rs  osc.rs  state.rs  store.rs
crates/omm-serve/: Cargo.toml
crates/omm-serve/src/: handlers.rs  lib.rs
crates/omm-style/: Cargo.toml
crates/omm-style/src/: style.rs
crates/omm-text/: Cargo.toml
crates/omm-text/src/: lib.rs  shaping.rs
crates/omm-tiles/: Cargo.toml
crates/omm-tiles/src/: coord.rs  encode.rs  lib.rs  mlt.rs  mvt.rs  mvt_decode.rs  pipeline.rs  pmtiles.rs  sort.rs
crates/omm/src/: lib.rs
crates/osmic/: Cargo.toml
crates/osmic-accel/: Cargo.toml  build.rs
crates/osmic-accel/src/: lib.rs
crates/osmic-accel/src/kernels/: geometry_ops.metal
crates/osmic-accel/src/metal/: accelerator.rs  batch.rs  buffer.rs  context.rs  flatten.rs  pipeline_cache.rs  types.rs
crates/osmic-app/: Cargo.toml
crates/osmic-app/src/: app.rs  event.rs  plugin.rs  resource.rs
crates/osmic-compact/: Cargo.toml
crates/osmic-compact/src/: area.rs  contour.rs  encoder.rs  feature_pack.rs  filter.rs  format.rs  lib.rs
crates/osmic-core/: Cargo.toml
crates/osmic-core/src/: clip.rs  color.rs  coord.rs  error.rs  geometry.rs  lib.rs  tile.rs
crates/osmic-extract/: Cargo.toml
crates/osmic-extract/src/: dedup.rs  entity.rs  filter.rs  lib.rs  output.rs  pipeline.rs
crates/osmic-geo/: Cargo.toml
crates/osmic-geo/src/: lib.rs  orient.rs  projection.rs  simplify.rs
crates/osmic-index/: Cargo.toml
crates/osmic-index/src/: feature_index.rs  lib.rs  node_location_store.rs  ram_node_store.rs
crates/osmic-osm/: Cargo.toml
crates/osmic-osm/src/: arena.rs  classify.rs  feature.rs  geojson.rs  layers.rs  lib.rs  pipeline.rs  tags.rs
crates/osmic-osm/src/io/: blob_stream.rs  mod.rs
crates/osmic-osm/src/multipolygon/: assembler.rs  ring.rs  segment.rs
crates/osmic-render/: Cargo.toml
crates/osmic-render/src/: backend.rs  lib.rs  scene.rs  skia.rs  style_eval.rs
crates/osmic-repl/: Cargo.toml
crates/osmic-repl/src/: apply.rs  dirty.rs  osc.rs  state.rs  store.rs
crates/osmic-serve/: Cargo.toml
crates/osmic-serve/src/: handlers.rs  lib.rs
crates/osmic-style/: Cargo.toml
crates/osmic-style/src/: lib.rs  style.rs
crates/osmic-text/: Cargo.toml
crates/osmic-text/src/: shaping.rs
crates/osmic-tiles/: Cargo.toml
crates/osmic-tiles/src/: coord.rs  encode.rs  mlt.rs  mvt.rs  mvt_decode.rs  pipeline.rs  pmtiles.rs  sort.rs
crates/osmic/src/: lib.rs
examples/custom-plugin/: Cargo.toml
examples/custom-plugin/src/: main.rs
examples/load-pbf/: Cargo.toml
examples/load-pbf/src/: main.rs
examples/render-static/: Cargo.toml
examples/render-static/src/: main.rs
examples/tile-server/: Cargo.toml
examples/tile-server/src/: main.rs
scripts/: publish.sh
