[workspace]
resolver = "2"
members = [
    "crates/osmic-core",
    "crates/osmic-osm",
    "crates/osmic-geo",
    "crates/osmic-index",
    "crates/osmic-style",
    "crates/osmic-tiles",
    "crates/osmic-render",
    "crates/osmic-text",
    "crates/osmic-app",
    "crates/osmic-serve",
    "crates/osmic-extract",
    "crates/osmic-accel",
    "crates/osmic-repl",
    "crates/osmic",
    "bins/osmic-cli",
    "bins/osmic-viewer",
    "examples/load-pbf",
    "examples/render-static",
    "examples/tile-server",
    "examples/custom-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/epistates/osmic"
homepage = "https://github.com/epistates/osmic"
authors = ["Nick Paterno"]
readme = "README.md"

[workspace.dependencies]
# Internal crates — version + path so `cargo publish` resolves via registry
osmic-core = { version = "0.1.0", path = "crates/osmic-core" }
osmic-osm = { version = "0.1.0", path = "crates/osmic-osm" }
osmic-geo = { version = "0.1.0", path = "crates/osmic-geo" }
osmic-index = { version = "0.1.0", path = "crates/osmic-index" }
osmic-style = { version = "0.1.0", path = "crates/osmic-style" }
osmic-tiles = { version = "0.1.0", path = "crates/osmic-tiles" }
osmic-render = { version = "0.1.0", path = "crates/osmic-render" }
osmic-text = { version = "0.1.0", path = "crates/osmic-text" }
osmic-app = { version = "0.1.0", path = "crates/osmic-app" }
osmic-serve = { version = "0.1.0", path = "crates/osmic-serve" }
osmic-extract = { version = "0.1.0", path = "crates/osmic-extract" }
osmic-accel = { version = "0.1.0", path = "crates/osmic-accel" }
osmic-repl = { version = "0.1.0", path = "crates/osmic-repl" }

# Parsing & data
osmpbf = "0.3"
rayon = "1.11"
memmap2 = "0.9"
lasso = { version = "0.7", features = ["multi-threaded"] }

# Geometry
geo-types = { version = "0.7", features = ["serde"] }
geo = "0.32"
rstar = "0.12"
proj4rs = "0.1"

# Tile & format
geozero = "0.15"
mvt = "0.12"
pmtiles = "0.21"

# Rendering
wgpu = "28"
lyon = "1.0"
tiny-skia = "0.12"
cosmic-text = "0.18"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "set-header"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }

# Utility
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
smallvec = { version = "1.15", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
