[package]
name = "omm-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for tile generation, PBF inspection, render-to-image"

[dependencies]
omm-core = { workspace = true }
omm-osm = { workspace = true }
omm-index = { workspace = true }
omm-tiles = { workspace = true }
omm-style = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
