[package]
name = "osmic-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for tile generation, PBF inspection, render-to-image"

[features]
default = []
mlt = ["osmic-tiles/mlt"]

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
osmic-index = { workspace = true }
osmic-extract = { workspace = true }
osmic-tiles = { workspace = true }
osmic-repl = { path = "../../crates/osmic-repl" }
osmic-serve = { path = "../../crates/osmic-serve" }
osmic-style = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
