[package]
name = "osmic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["command-line-utilities", "science::geo"]
keywords = ["osm", "pbf", "tiles", "cli", "map"]
readme.workspace = true
description = "CLI for tile generation, PBF inspection, render-to-image"

[features]
default = []
mlt = ["osmic-tiles/mlt"]

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true, features = ["native"] }
osmic-index = { workspace = true }
osmic-extract = { workspace = true }
osmic-tiles = { workspace = true }
osmic-repl = { workspace = true }
osmic-serve = { workspace = true }
osmic-style = { workspace = true }
osmic-compact = { workspace = true, features = ["contours"] }
reqwest = { version = "0.12", features = ["blocking"] }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
