[package]
name = "osmic-trail-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP server that generates and serves compact trail map blobs on-demand"

[dependencies]
osmic-core.workspace = true
osmic-osm = { workspace = true, features = ["native"] }
osmic-index.workspace = true
osmic-compact.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
