[package]
name = "osmic-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["visualization", "science::geo"]
keywords = ["map-viewer", "wgpu", "gis", "pmtiles", "interactive"]
readme.workspace = true
description = "Interactive wgpu windowed map viewer"

[dependencies]
osmic-core = { workspace = true }
osmic-tiles = { workspace = true }
osmic-geo = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
lyon = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
cosmic-text = { workspace = true }
pmtiles = { workspace = true, features = ["mmap-async-tokio"] }
tokio = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
