[package]
name = "omm-accel"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated geometry processing for tile generation (Apple Silicon Metal)"
build = "build.rs"

[dependencies]
omm-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
geo-types = { workspace = true }
geo = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
parking_lot = "0.12"

[build-dependencies]
cc = "1"
