[package]
name = "omm-extract"
version = "0.1.0"
edition = "2021"
description = "Business entity extraction from OSM PBF — tag-based filtering, contact metadata, deduplication"

[dependencies]
omm-core = { workspace = true }
omm-osm = { workspace = true }
omm-index = { workspace = true }
osmpbf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
