[package]
name = "omm-index"
version = "0.1.0"
edition = "2021"
description = "Node location store (mmap) and spatial R-tree index"

[dependencies]
omm-core = { workspace = true }
omm-osm = { workspace = true }
memmap2 = { workspace = true }
rstar = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
