[package]
name = "omm-tiles"
version = "0.1.0"
edition = "2021"
description = "MVT encoding, PMTiles/MBTiles archives, tile math"

[dependencies]
omm-core = { workspace = true }
omm-geo = { workspace = true }
omm-index = { workspace = true }
omm-osm = { workspace = true }
geo-types = { workspace = true }
mvt = { workspace = true }
pmtiles = { workspace = true, features = ["write"] }
rayon = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
