[package]
name = "omm"
version = "0.1.0"
edition = "2021"
description = "OpenMapMarketor facade crate: re-exports, prelude, DefaultPlugins"

[dependencies]
omm-core = { workspace = true }
omm-osm = { workspace = true }
omm-geo = { workspace = true }
omm-index = { workspace = true }
omm-app = { workspace = true }
omm-style = { workspace = true }
omm-tiles = { workspace = true }
omm-render = { workspace = true }
omm-text = { workspace = true }
omm-serve = { workspace = true }
