[package]
name = "osmic-accel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "hardware-support"]
keywords = ["metal", "gpu", "geometry", "macos", "accelerator"]
readme.workspace = true
description = "GPU-accelerated geometry processing for tile generation (Apple Silicon Metal)"
build = "build.rs"

[dependencies]
osmic-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
geo-types = { workspace = true }
geo = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
parking_lot = "0.12"

[build-dependencies]
cc = "1"
