[package]
name = "osmic-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "rust-patterns"]
keywords = ["plugin", "app", "framework", "map"]
readme.workspace = true
description = "Plugin system, App builder, event bus, and lifecycle"

[dependencies]
osmic-core = { workspace = true }
tracing = { workspace = true }
