[package]
name = "osmic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "data-structures"]
keywords = ["osm", "openstreetmap", "geo", "coordinates"]
readme.workspace = true
description = "Shared types, errors, and coordinate primitives for osmic"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
geo-types = { workspace = true }

[dev-dependencies]
# Path-only (no version) — stripped from published manifest, avoids
# circular dep during `cargo package` since osmic-geo depends on osmic-core.
osmic-geo = { path = "../osmic-geo" }
