[package]
name = "osmic-extract"
version = "0.1.0"
edition = "2021"
description = "Business entity extraction from OSM PBF — tag-based filtering, contact metadata, deduplication"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
osmic-index = { workspace = true }
osmpbf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
