[package]
name = "osmic-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "parser-implementations"]
keywords = ["osm", "extraction", "poi", "geocoding", "business"]
readme.workspace = true
description = "Business entity extraction from OSM PBF — tag-based filtering, contact metadata, deduplication"

[dependencies]
osmic-core = { workspace = true }
osmic-index = { workspace = true }
osmpbf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
