[package]
name = "osmic-geo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "algorithms"]
keywords = ["geo", "projection", "simplification", "clipping"]
readme.workspace = true
description = "Projection, simplification, clipping, and validation"

[dependencies]
osmic-core = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
