[package]
name = "osmic-index"
version = "0.1.0"
edition = "2021"
description = "Node location store (mmap) and spatial R-tree index"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
memmap2 = { workspace = true }
rstar = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
