[package]
name = "osmic-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "data-structures"]
keywords = ["spatial-index", "rtree", "osm", "geo"]
readme.workspace = true
description = "Node location store (mmap) and spatial R-tree index"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
memmap2 = { workspace = true }
rstar = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
