[package]
name = "osmic-osm"
version = "0.1.0"
edition = "2021"
description = "OSM data model, PBF parsing, tag system, and classification"

[features]
default = ["native"]
native = ["dep:osmpbf", "dep:rayon"]

[dependencies]
osmic-core = { workspace = true }
osmic-geo = { workspace = true }
bumpalo = "3.20"
crossbeam-channel = "0.5"
osmpbf = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
lasso = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
