[package]
name = "osmic-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "graphics"]
keywords = ["rendering", "map", "tessellation", "skia"]
readme.workspace = true
description = "Backend abstraction, scene graph, tessellation"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
osmic-style = { workspace = true }
tiny-skia = { workspace = true }
cosmic-text = { workspace = true }
geo-types = { workspace = true }
tracing = { workspace = true }
