[package]
name = "osmic-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["web-programming::http-server", "science::geo"]
keywords = ["tile-server", "mvt", "pmtiles", "axum", "map"]
readme.workspace = true
description = "HTTP tile server with Tower middleware pipeline"

[dependencies]
osmic-core = { workspace = true }
osmic-app = { workspace = true }
osmic-style = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
pmtiles = { workspace = true, features = ["mmap-async-tokio"] }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
