[package]
name = "osmic-style"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "visualization"]
keywords = ["maplibre", "mapbox", "style", "map", "cartography"]
readme.workspace = true
description = "MapLibre-compatible style system"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
