[package]
name = "osmic-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["text-processing", "graphics"]
keywords = ["text-shaping", "labels", "glyph", "cosmic-text"]
readme.workspace = true
description = "Text shaping, label collision, glyph atlas"

[dependencies]
osmic-core = { workspace = true }
cosmic-text = { workspace = true }
tracing = { workspace = true }
