[package]
name = "osmic-tiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "visualization"]
keywords = ["mvt", "pmtiles", "vector-tiles", "osm", "gis"]
readme.workspace = true
description = "MVT/MLT encoding, PMTiles archives, tile math"

[features]
default = ["native"]
native = ["dep:rayon", "dep:pmtiles", "osmic-osm/native"]
mlt = ["dep:mlt-core"]

[dependencies]
osmic-core = { workspace = true }
osmic-geo = { workspace = true }
osmic-index = { workspace = true }
osmic-osm = { workspace = true, default-features = false }
geo-types = { workspace = true }
mvt = { workspace = true }
pmtiles = { workspace = true, features = ["write"], optional = true }
rayon = { workspace = true, optional = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
geo = { workspace = true }
mlt-core = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
osmic-accel = { workspace = true }
