[package]
name = "osmic"
version = "0.1.0"
edition = "2021"
description = "Osmic facade crate: re-exports, prelude, DefaultPlugins"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true }
osmic-geo = { workspace = true }
osmic-index = { workspace = true }
osmic-app = { workspace = true }
osmic-style = { workspace = true }
osmic-tiles = { workspace = true }
osmic-render = { workspace = true }
osmic-text = { workspace = true }
osmic-serve = { workspace = true }
