[package]
name = "osmic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories = ["science::geo", "visualization"]
keywords = ["osm", "openstreetmap", "maps", "tiles", "gis"]
readme.workspace = true
description = "Osmic facade crate: re-exports, prelude, DefaultPlugins"

[dependencies]
osmic-core = { workspace = true }
osmic-osm = { workspace = true, features = ["native"] }
osmic-geo = { workspace = true }
osmic-index = { workspace = true }
osmic-app = { workspace = true }
osmic-style = { workspace = true }
osmic-tiles = { workspace = true }
osmic-render = { workspace = true }
osmic-text = { workspace = true }
osmic-serve = { workspace = true }
